template/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: APPLICATION_NAME
  namespace: default
spec:
  selector:
    app: APPLICATION_NAME
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
