template/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APPLICATION_NAME
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: APPLICATION_NAME.k3s.home.klrnbk.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: APPLICATION_NAME
                port:
                  number: 80
